--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "personal.png"
   name             : "Zhe Shen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Qué será, será"
   location         : "Shanghai"
   employer         : "Shanghai Jiao Tong University"
   uri              : # URL
