--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Research"
     url: /publications/
 
-  #- title: "Talks"
+  - title: "Conference Presentaions"
     #url: /talks/    
 
   #- title: "Teaching"
