--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: /publications/
 
   - title: "Conference Presentaions"
-    #url: /talks/    
+    url: /Conference-Presentations/
 
   #- title: "Teaching"
     #url: /teaching/    
